@@ -2,19 +2,16 @@ package com.javarush.task.pro.task15.task1504;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Scanner;
 
 public class Solution {
 
     public static void main(String[] args) {
-        Scanner scanner = new Scanner(System.in);
-        String src = scanner.nextLine();
-        String dest = scanner.nextLine();
-        scanner.close();
-
-        try (var input = Files.newInputStream(Path.of(src));
-             var output = Files.newOutputStream(Path.of(dest))) {
+        try (Scanner scanner = new Scanner(System.in);
+             var input = Files.newInputStream(Paths.get(scanner.nextLine()));
+             var output = Files.newOutputStream(Paths.get(scanner.nextLine()))
+        ) {
             byte[] buffer = new byte[65536];
             while (input.available() > 0) {
                 int real = input.read(buffer);
